--- a/app/src/main/res/layout/fragment_new_patient.xml
+++ b/app/src/main/res/layout/fragment_new_patient.xml
@@ -6,12 +6,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.fragments.MainActivityFragment"
-    tools:showIn="@layout/activity_main">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World" />
+    tools:context=".ui.fragments.NewPatientActivityFragment">
 
 </RelativeLayout>
