--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="default_corner_radius">5dp</dimen>
     <dimen name="material_text_title">20sp</dimen>
     <dimen name="small_padding">4dp</dimen>
+    <dimen name="list_padding">10dp</dimen>
 </resources>
