--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
-            android:id="@+id/lu"
+            android:id="@+id/bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
@@ -26,7 +26,7 @@
 
         <FrameLayout
             android:id="@+id/activity_fragment_layout"
-            android:layout_below="@+id/lu"
+            android:layout_below="@+id/bar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
