--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="action_bar_primary_dark">#B70303</color>
     <color name="accent">#FF4081</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="forms_text_color">#DD000000</color>
+    <color name="black">#FF000000</color>
+    <color name="red">#E00000</color>
+    <color name="material_hint">#44000000</color>
 </resources>
