--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,9 @@
     <dimen name="material_text_title">20sp</dimen>
     <dimen name="small_padding">4dp</dimen>
     <dimen name="list_padding">10dp</dimen>
+    <dimen name="input_field_left_margin">9dp</dimen>
+    <dimen name="input_field_top_margin">10dp</dimen>
+    <dimen name="input_field_right_margin">8dp</dimen>
+    <dimen name="material_text_subhead">16sp</dimen>
+    <dimen name="material_text_caption">12sp</dimen>
 </resources>
