--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,7 @@
     <dimen name="input_field_right_margin">8dp</dimen>
     <dimen name="material_text_subhead">16sp</dimen>
     <dimen name="material_text_caption">12sp</dimen>
+    <dimen name="fab_button_height">52dp</dimen>
+    <dimen name="fab_button_elevation">6dp</dimen>
+    <dimen name="default_margin">10dp</dimen>
 </resources>
