--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="default_margin">10dp</dimen>
     <dimen name="extra_big_finger_size">70dp</dimen>
     <dimen name="card_view_default_corner_radius">3dp</dimen>
+    <dimen name="default_elevation">4dp</dimen>
 </resources>
