--- a/app/src/main/res/layout/fragment_patient_page.xml
+++ b/app/src/main/res/layout/fragment_patient_page.xml
@@ -10,10 +10,30 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_vertical_margin">
 
-        <TextView
-            android:id="@+id/patient_page_content"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/patient_page_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/material_text_title"
+                android:paddingBottom="@dimen/large_padding"/>
+
+            <LinearLayout
+                android:id="@+id/patient_page_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/small_padding"
+                android:paddingLeft="@dimen/large_padding"
+                android:paddingRight="@dimen/large_padding"
+                android:paddingTop="@dimen/small_padding" />
+
+        </LinearLayout>
+
     </ScrollView>
 
     <LinearLayout
@@ -26,24 +46,24 @@
         <Button
             android:id="@+id/edit_preliminary_diag_btn"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
             android:layout_weight="1"
             android:background="@color/accent"
-            android:textColor="@color/white"
-            android:layout_margin="6dp"
-            android:text="@string/edit_preliminary_diagnosis"
             android:maxWidth="50dp"
-            android:layout_height="wrap_content" />
+            android:text="@string/edit_preliminary_diagnosis"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/edit_heart_situation_btn"
-            android:layout_margin="6dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
             android:layout_weight="1"
-            android:text="@string/edit_complementary_tests"
-            android:maxWidth="50dp"
             android:background="@color/accent"
-            android:textColor="@color/white"
-            android:layout_height="wrap_content" />
+            android:maxWidth="50dp"
+            android:text="@string/edit_complementary_tests"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 </RelativeLayout>
