--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,7 @@
     <dimen name="card_view_default_corner_radius">3dp</dimen>
     <dimen name="default_elevation">4dp</dimen>
     <dimen name="listing_item_height">90dp</dimen>
+    <dimen name="finger_size">48dp</dimen>
+    <dimen name="patient_attribute_label_width">150dp</dimen>
+    <dimen name="material_text_body">14sp</dimen>
 </resources>
