--- a/app/src/main/res/layout/fragment_patient_page.xml
+++ b/app/src/main/res/layout/fragment_patient_page.xml
@@ -20,6 +20,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/material_text_title"
+                android:layout_marginLeft="@dimen/medium_padding"
+                android:text="Luciana"
                 android:paddingBottom="@dimen/large_padding"/>
 
             <LinearLayout
@@ -27,43 +29,46 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/small_padding"
+                android:paddingBottom="@dimen/large_padding"
                 android:paddingLeft="@dimen/large_padding"
                 android:paddingRight="@dimen/large_padding"
                 android:paddingTop="@dimen/small_padding" />
+
+            <Button
+                android:id="@+id/edit_preliminary_diag_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:layout_weight="1"
+                android:background="@color/accent"
+                android:maxWidth="50dp"
+                android:text="@string/edit_preliminary_diagnosis"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/edit_heart_situation_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:layout_weight="1"
+                android:background="@color/accent"
+                android:maxWidth="50dp"
+                android:text="@string/edit_complementary_tests"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/continue_diag_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:layout_weight="1"
+                android:background="@color/accent"
+                android:maxWidth="50dp"
+                android:text="@string/continue_diagnosis"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
     </ScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:elevation="@dimen/default_elevation"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/edit_preliminary_diag_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="6dp"
-            android:layout_weight="1"
-            android:background="@color/accent"
-            android:maxWidth="50dp"
-            android:text="@string/edit_preliminary_diagnosis"
-            android:textColor="@color/white" />
-
-        <Button
-            android:id="@+id/edit_heart_situation_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="6dp"
-            android:layout_weight="1"
-            android:background="@color/accent"
-            android:maxWidth="50dp"
-            android:text="@string/edit_complementary_tests"
-            android:textColor="@color/white" />
-
-    </LinearLayout>
 </RelativeLayout>
