--- a/app/src/main/res/layout/view_patient_attribute.xml
+++ b/app/src/main/res/layout/view_patient_attribute.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="@dimen/finger_size">
+    android:minHeight="@dimen/patient_attribute_height">
 
     <TextView
         android:id="@+id/patient_attribute_label"
