--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ico_plus"
+        android:src="@drawable/ic_plus_white"
         app:borderWidth="0dp"
         app:elevation="@dimen/fab_button_elevation" />
 
