--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="red">#E00000</color>
     <color name="material_hint">#44000000</color>
+    <color name="divider">#1f000000</color>
 </resources>
