--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,5 @@
     <dimen name="patient_attribute_label_width">160dp</dimen>
     <dimen name="material_text_body">14sp</dimen>
     <dimen name="patient_attribute_height">30dp</dimen>
+    <dimen name="one_dp">1dp</dimen>
 </resources>
