--- a/app/src/main/res/layout/fragment_patient_page.xml
+++ b/app/src/main/res/layout/fragment_patient_page.xml
@@ -38,42 +38,28 @@
             android:background="@color/divider"
             android:paddingBottom="@dimen/large_padding"/>
 
-        <LinearLayout
-            android:id="@+id/add_heart_situation_layout"
+        <com.luacevedo.heartbaymax.ui.views.PatientStageView
+            android:id="@+id/initial_state_stage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:paddingBottom="10dp"
-            android:clickable="true"
-            android:background="?attr/selectableItemBackground"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:paddingLeft="4dp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_plus_red" />
+        </com.luacevedo.heartbaymax.ui.views.PatientStageView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="22dp"
-                android:textSize="16sp"
-                android:layout_gravity="center_vertical"
-                android:text="@string/update_heart_situation"/>
+        <com.luacevedo.heartbaymax.ui.views.PatientStageView
+            android:id="@+id/heart_situation_stage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        </LinearLayout>
+        </com.luacevedo.heartbaymax.ui.views.PatientStageView>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/one_dp"
             android:layout_marginLeft="@dimen/small_padding"
             android:layout_marginRight="@dimen/small_padding"
-            android:layout_marginTop="8dp"
             android:background="@color/divider"
             android:paddingBottom="@dimen/large_padding"/>
-        
+
 
     </LinearLayout>
 
