--- a/app/src/main/res/layout/fragment_patient_page.xml
+++ b/app/src/main/res/layout/fragment_patient_page.xml
@@ -16,25 +16,11 @@
             android:layout_marginLeft="@dimen/medium_padding"
             android:layout_width="match_parent"
             android:paddingBottom="@dimen/large_padding"
-            android:text="Luciana"
             android:textSize="@dimen/material_text_title" />
-
-        <LinearLayout
-            android:id="@+id/patient_page_content"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/large_padding"
-            android:paddingLeft="@dimen/large_padding"
-            android:paddingRight="@dimen/large_padding"
-            android:paddingTop="@dimen/small_padding" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/one_dp"
-            android:layout_marginLeft="@dimen/small_padding"
-            android:layout_marginRight="@dimen/small_padding"
-            android:layout_marginTop="8dp"
             android:background="@color/divider"
             android:paddingBottom="@dimen/large_padding"/>
 
@@ -45,6 +31,12 @@
 
         </com.luacevedo.heartbaymax.ui.views.PatientStageView>
 
+        <View
+            android:layout_height="@dimen/one_dp"
+            android:layout_width="match_parent"
+            android:background="@color/divider"
+            android:paddingBottom="@dimen/large_padding"/>
+
         <com.luacevedo.heartbaymax.ui.views.PatientStageView
             android:id="@+id/heart_situation_stage"
             android:layout_width="match_parent"
@@ -53,10 +45,8 @@
         </com.luacevedo.heartbaymax.ui.views.PatientStageView>
 
         <View
-            android:layout_width="match_parent"
             android:layout_height="@dimen/one_dp"
-            android:layout_marginLeft="@dimen/small_padding"
-            android:layout_marginRight="@dimen/small_padding"
+            android:layout_width="match_parent"
             android:background="@color/divider"
             android:paddingBottom="@dimen/large_padding"/>
 
