--- a/app/src/main/res/layout/fragment_patient_page.xml
+++ b/app/src/main/res/layout/fragment_patient_page.xml
@@ -38,7 +38,59 @@
             android:paddingBottom="@dimen/large_padding"/>
 
         <com.luacevedo.heartbaymax.ui.views.PatientStageView
-            android:id="@+id/heart_situation_stage"
+            android:id="@+id/preliminary_diagnosis_stage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </com.luacevedo.heartbaymax.ui.views.PatientStageView>
+
+        <View
+            android:layout_height="@dimen/one_dp"
+            android:layout_width="match_parent"
+            android:background="@color/divider"
+            android:paddingBottom="@dimen/large_padding"/>
+
+        <com.luacevedo.heartbaymax.ui.views.PatientStageView
+            android:id="@+id/ecg_stage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </com.luacevedo.heartbaymax.ui.views.PatientStageView>
+
+        <View
+            android:layout_height="@dimen/one_dp"
+            android:layout_width="match_parent"
+            android:background="@color/divider"
+            android:paddingBottom="@dimen/large_padding"/>
+
+        <com.luacevedo.heartbaymax.ui.views.PatientStageView
+            android:id="@+id/rx_stage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </com.luacevedo.heartbaymax.ui.views.PatientStageView>
+
+        <View
+            android:layout_height="@dimen/one_dp"
+            android:layout_width="match_parent"
+            android:background="@color/divider"
+            android:paddingBottom="@dimen/large_padding"/>
+
+        <com.luacevedo.heartbaymax.ui.views.PatientStageView
+            android:id="@+id/lab_analysis_stage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </com.luacevedo.heartbaymax.ui.views.PatientStageView>
+
+        <View
+            android:layout_height="@dimen/one_dp"
+            android:layout_width="match_parent"
+            android:background="@color/divider"
+            android:paddingBottom="@dimen/large_padding"/>
+
+        <com.luacevedo.heartbaymax.ui.views.PatientStageView
+            android:id="@+id/final_diagnosis_stage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
