--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="red">#E00000</color>
     <color name="material_hint">#44000000</color>
     <color name="divider">#1f000000</color>
+    <color name="disabled">#b4b4b4</color>
 </resources>
