--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <FrameLayout
+            android:id="@+id/activity_overlay_fragment_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </RelativeLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
