--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,8 @@
     <dimen name="material_text_body">14sp</dimen>
     <dimen name="patient_attribute_height">30dp</dimen>
     <dimen name="one_dp">1dp</dimen>
+    <dimen name="overlay_margin">40dp</dimen>
+    <dimen name="extra_large_padding">20dp</dimen>
+    <dimen name="control_corner_material">2dp</dimen>
+    <dimen name="rounded_corner">2dp</dimen>
 </resources>
