--- a/app/src/main/res/layout/fragment_diagnosis_step.xml
+++ b/app/src/main/res/layout/fragment_diagnosis_step.xml
@@ -27,6 +27,7 @@
         android:layout_below="@id/diagnosis_step_scroll"
         android:background="@drawable/material_custom_button"
         android:gravity="center"
+        android:textAllCaps="true"
         android:padding="@dimen/large_padding"
         android:clickable="true"
         android:text="next"
