--- a/app/src/main/res/layout/fragment_patient_page.xml
+++ b/app/src/main/res/layout/fragment_patient_page.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/activity_vertical_margin"
     android:layout_width="match_parent"
+    android:paddingLeft="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_vertical_margin"
+    android:scrollbarStyle="outsideInset"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -12,6 +14,7 @@
 
         <TextView
             android:id="@+id/patient_page_name"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/medium_padding"
             android:layout_width="match_parent"
