--- a/app/src/main/res/layout/fragment_patient_page_data.xml
+++ b/app/src/main/res/layout/fragment_patient_page_data.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/activity_vertical_margin">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/patient_page_data_content"
@@ -10,9 +9,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="@dimen/large_padding"
-        android:paddingLeft="@dimen/large_padding"
+        android:paddingLeft="@dimen/extra_large_padding"
         android:paddingRight="@dimen/large_padding"
-        android:paddingTop="@dimen/small_padding" />
+        android:paddingTop="@dimen/large_padding" />
 
 </ScrollView>
 
