--- a/app/src/main/res/layout/fragment_diagnosis_step.xml
+++ b/app/src/main/res/layout/fragment_diagnosis_step.xml
@@ -15,6 +15,7 @@
             android:id="@+id/diagnosis_form_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/large_padding"
             android:orientation="vertical" />
 
     </ScrollView>
