--- a/app/src/main/res/layout/viewholder_home_patient.xml
+++ b/app/src/main/res/layout/viewholder_home_patient.xml
@@ -4,8 +4,8 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground"
     android:clickable="true"
+    android:foreground="?attr/selectableItemBackground"
     card_view:cardCornerRadius="@dimen/card_view_default_corner_radius"
     card_view:cardElevation="@dimen/cardview_default_elevation"
     card_view:cardUseCompatPadding="true">
@@ -20,25 +20,39 @@
             android:id="@+id/home_patient_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
             android:layout_marginLeft="14dp"
-            android:src="@drawable/ic_patient_man"/>
+            android:layout_marginTop="14dp"
+            android:src="@drawable/ic_patient_man" />
 
-        <TextView
-            android:id="@+id/home_patient_title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:maxLines="2"
             android:layout_toRightOf="@+id/home_patient_image"
-            android:paddingBottom="@dimen/medium_padding"
-            android:paddingLeft="@dimen/medium_padding"
-            android:paddingRight="@dimen/medium_padding"
-            android:paddingTop="@dimen/medium_padding"
-            android:textSize="@dimen/material_text_subhead"
-            android:textAlignment="center" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/home_patient_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:paddingBottom="@dimen/small_padding"
+                android:paddingLeft="@dimen/medium_padding"
+                android:paddingRight="@dimen/medium_padding"
+                android:paddingTop="@dimen/medium_padding"
+                android:textSize="@dimen/material_text_subhead" />
+
+            <TextView
+                android:id="@+id/home_patient_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:maxLines="2"
+                android:paddingBottom="@dimen/medium_padding"
+                android:paddingLeft="@dimen/medium_padding"
+                android:paddingRight="@dimen/medium_padding"
+                android:paddingTop="@dimen/small_padding"
+                android:textSize="@dimen/material_text_subhead" />
+        </LinearLayout>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
